--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 	<style type="text/css">
 		body {
-			font-family: 'Andale Mono', 'Courier New', monospace;
+			font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 
 			box-sizing: border-box;
 			width: 34em;
