--- a/liv/index.html
+++ b/liv/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>liedberg.org/liv</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">
 		body {
 			font-family: 'Permanent Marker', monospace;
